src/test/deca/syntax/invalid/sansobjet/Supeq1.deca
//Supeq1.deca:5:9: mismatched input ';' expecting {STRING,
//Description:  inf sans droite
//Resultat: Erreur ligne 5
{
   12 >= ;
}
